--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,8 @@
-secret = "1242357257612378078346769124707824756239586239864520374"
+spring.kafka.producer.bootstrap-servers=localhost:9092,localhost:9094
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.retries=10
+spring.kafka.producer.properties.retry.backoff.ms=1000
+spring.kafka.producer.properties.delivery.timeout.ms=60000
+spring.kafka.producer.properties.linger.ms=0
+spring.kafka.producer.properties.request.timeout.ms=30000
